started adding tooltips

--- a/stochastic_sierpinski.html
+++ b/stochastic_sierpinski.html
@@ -586,6 +586,68 @@ td.move_mode {
   text-align: right;
 }
 
+.tt {
+  position: relative;
+}
+
+.tt::before {
+   content: attr(data-title);
+   display: none;
+   position: absolute;
+   width: 240px;
+   z-index: 2;
+
+   padding: 3px 5px;
+   text-align: left;
+   background-color: #f4f4f4;
+   border: 2px solid #222;
+   border-radius: 6px;
+}
+
+.tt.ttleft::before {
+   top: 165%;
+   right: 0;
+}
+
+.tt.ttright::before {
+   top: 165%;
+   left: 0;
+}
+
+.tt.ttleft::after {
+  content: " ";
+  display: none;
+  position: absolute;
+  z-index: 1;
+  bottom: -12px;
+  left: 50%;
+  margin-top: -8px;
+  border-width: 8px;
+  border-style: solid;
+  border-color: transparent transparent #222 transparent;
+}
+
+.tt.ttright::after {
+  content: " ";
+  display: none;
+  position: absolute;
+  z-index: 1;
+  bottom: -12px;
+  left: 50%;
+  margin-top: -8px;
+  border-width: 8px;
+  border-style: solid;
+  border-color: transparent transparent #222 transparent;
+}
+
+.show_tt .tt:hover::before,
+.show_tt .tt.ttleft:hover::after,
+.show_tt .tt.ttright:hover::after {
+  display: block;
+}
+
+
+
     </style>
   </head>
   <body>
@@ -595,7 +657,7 @@ td.move_mode {
 
     <pre id="debugbox" class="hidden"><span class="hdr"></span><span class="msg"></span></pre>
 
-    <div id="content">
+    <div id="content" class="show_tt">
       <div class="graph panel">
         <div id="graph_wrapper" class="canvas_wrapper canvas_size">
           <canvas id="graph" class="graph_canvas canvas_size" width="420" height="420">
@@ -657,10 +719,10 @@ td.move_mode {
 
       <div class="ui panel">
         <div class="runbox buttonbox">
-          <button id="button_reset">Reset</button>
-          <button id="button_step">Step 1x</button>
-          <button id="button_multistep">Step Nx</button>
-          <button id="button_run">Run</button>
+          <button id="button_reset" class="tt ttright" data-title="Reset back to a blank canvas.">Reset</button>
+          <button id="button_step" class="tt ttright" data-title="One step of the chaos game. Selects a random point, moves toward it, and draws a point.">Step 1x</button>
+          <button id="button_multistep" class="tt ttright" data-title="Run a fixed number of steps. The number of steps can be changed with the 'Steps / Frame' option.">Step Nx</button>
+          <button id="button_run" class="tt ttright" data-title="Draws 'Steps / Frame' points every frame until manually stopped by pressing Pause or Step">Run</button>
         </div>
 
         <div class="pointsbox buttonbox">
@@ -669,8 +731,8 @@ td.move_mode {
           <input type="number" id="num_points" value="3"
                  min="3" max="8" step="1">
           <span class="title">Move All</span>
-          <button id="move_all_reg_polygon">Reg. Polygon</button>
-          <button id="move_all_random">Random</button>
+          <button id="move_all_reg_polygon" class="tt ttleft" data-title="Move all points into the corners of an N-sided regullar polygon.">Reg. Polygon</button>
+          <button id="move_all_random" class="tt ttleft" data-title="Move all points to random positions.">Random</button>
         </div>
 
         <hr>
@@ -802,8 +864,13 @@ td.move_mode {
         <div class="optionsbox buttonbox">
           <table>
             <tr>
+              <th>Show Tooltips</th>
+              <td><input id="show_tooltips" type="checkbox" checked="checked"></td>
+              </td>
+            </tr>
+            <tr>
               <th>Steps / Frame</th>
-              <td colspan=2>
+              <td>
                 <input type="number" id="steps_per_frame"
                        min="0" max="500" step="10">
               </td>
@@ -849,10 +916,10 @@ td.move_mode {
         <hr>
 
         <div class="imgbox buttonbox">
-          <button id="button_create_png">Create PNG</button>
-          <button id="button_save_url">Save as URL</button>
-          <button id="button_save">Save as JSON</button>
-          <button id="button_load">Load from JSON</button>
+          <button id="button_create_png" class="tt ttright" data-title="Open the current canvas image as a PNG file in a new tab/window.">Create PNG</button>
+          <button id="button_save_url" class="tt ttright" data-title="Saves the current settings to the hash (#) on the current URL">Save as URL</button>
+          <button id="button_save" class="tt ttright" data-title="Saves the current settings to copy-able JSON-formatted text.">Save as JSON</button>
+          <button id="button_load" class="tt ttright" data-title="Paste the JSON-formatted text (from 'Save as JSON') to load previously saves settings.">Load from JSON</button>
         </div>
       </div>
 
@@ -2856,6 +2923,7 @@ td.move_mode {
     StochasticSierpinski.prototype.NEARBY_RADIUS = 8;
 
     StochasticSierpinski.prototype.DEFAULT = {
+      show_tooltips: true,
       graph: {
         width: 420,
         height: 420
@@ -2927,6 +2995,7 @@ td.move_mode {
       this.on_mouseenter = bind(this.on_mouseenter, this);
       this.on_draw_opacity_change = bind(this.on_draw_opacity_change, this);
       this.on_move_range_change = bind(this.on_move_range_change, this);
+      this.on_show_tooltips_change = bind(this.on_show_tooltips_change, this);
     }
 
     StochasticSierpinski.prototype.init = function() {
@@ -2939,6 +3008,7 @@ td.move_mode {
       this.imgmask_overlay_highlight = null;
       this.step_count = 0;
       this.steps_per_frame_el = this.context.getElementById('steps_per_frame');
+      this.content_el = this.context.getElementById('content');
       this.graph_wrapper = this.context.getElementById('graph_wrapper');
       this.graph_canvas = this.context.getElementById('graph');
       this.graph_ui_canvas = this.context.getElementById('graph_ui');
@@ -2962,6 +3032,7 @@ td.move_mode {
       this.btn_move_all_reg_polygon = this.context.getElementById('move_all_reg_polygon');
       this.btn_move_all_random = this.context.getElementById('move_all_random');
       this.option = {
+        shows_tooltips: new BoolUIOption('show_tooltips', APP.DEFAULT.show_tooltips, this.on_show_tooltips_change),
         canvas_width: new NumberUIOption('canvas_width', APP.DEFAULT.graph.width, this.on_canvas_width_change),
         canvas_height: new NumberUIOption('canvas_height', APP.DEFAULT.graph.height, this.on_canvas_height_change),
         draw_opacity: new NumberUIOption('draw_opacity', APP.DEFAULT.draw_opacity, this.on_draw_opacity_change),
@@ -3082,6 +3153,14 @@ td.move_mode {
       el = this.create_element('input', id);
       el.type = type;
       return el;
+    };
+
+    StochasticSierpinski.prototype.on_show_tooltips_change = function(value) {
+      if (value) {
+        return this.content_el.classList.add('show_tt');
+      } else {
+        return this.content_el.classList.remove('show_tt');
+      }
     };
 
     StochasticSierpinski.prototype.on_move_range_change = function() {
@@ -4079,6 +4158,7 @@ td.move_mode {
   document.addEventListener('DOMContentLoaded', (function(_this) {
     return function() {
       APP = new StochasticSierpinski(document);
+      window.APP = APP;
       APP.init();
       APP.on_hashchange();
       return APP.load_from_cookie();
